// Produced by Acceleo JavaScript Generator 1.1.2
/* eslint-disable max-len, "DV6 TBC_CNES generated file" */
const _now = require('lodash/now');
const applyOverride = require('../../../protobuf/utils/applyOverride');


const now = _now();

module.exports = override => applyOverride({
  versionNumber: 1,
  sequenceCount: 100,
  sourceId: 100,
  serviceType: 1,
  serviceSubType: 1,
  subCounter: 1,
  destinationId: 1,
  time: now + 1,
}, override);
